components/k8s_common/load_balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: load-balancer-service
spec:
  type: LoadBalancer
  selector:
    svc: external-lb
  ports:
    - name: flask-port
      port: 5000
      targetPort: 5000
    - name: grafana-port
      port: 3000
      targetPort: 3000
    - name: mlflow
      port: 6000
      targetPort: 6000
    - name: prometheus-port
      port: 9090
      targetPort: 9090
    - name: airflow-ui
      port: 8080
      targetPort: 8080
