components/k8s_common/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.allow-http: "true"
spec:
  rules:
  - host: example.com
    http:
      paths:
      - path: /mlflow
        pathType: Prefix
        backend:
          service:
            name: mlflow-service
            port:
              name: mlflow
  - host: example.com
    http:
      paths:
      - path: /prometheus
        pathType: Prefix
        backend:
          service:
            name: prometheus
            port:
              name: prometheus-port
  - host: example.com
    http:
      paths:
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              name: grafana-port
  - host: example.com
    http:
      paths:
      - path: /airflow
        pathType: Prefix
        backend:
          service:
            name: airflow-webserver
            port:
              name: airflow-ui
  - host: example.com
    http:
      paths:
      - path: /docs
        pathType: Prefix
        backend:
          service:
            name: flaskapp-service
            port:
              name: flask-port
